--- a/src/Login/Loginpage.css
+++ b/src/Login/Loginpage.css
@@ -1,12 +1,16 @@
-.App {
+.App2 {
     text-align: center;
     display: flex;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    color: white;
-    background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
+    color:white;
+    background-image: linear-gradient(70deg, #000000,  50%, #B82E1F);
+    
+    /*color: white;#831010*/
+    /*background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);*/
   }
+
   
   .auth-form-container, .login-form, .register-form {
     display: flex;
@@ -40,7 +44,7 @@
     padding: 20px;
     border-radius: 10px;
     cursor: pointer;
-    color: #7439db;
+    color: #000000;
   }
   
   .link-btn {
@@ -48,6 +52,7 @@
     color: white;
     text-decoration: underline;
   }
+  
   /*
   .App {
     text-align: center;
