--- a/src/Forum/Forumpage.css
+++ b/src/Forum/Forumpage.css
@@ -1,4 +1,39 @@
-.test{
-  background-color:blue;
+.forumspage{
   color: white;
+  flex-direction: column;
 }
+ .navigation-bar{
+    background-color: black;
+    width:1460px;
+    height:50px;
+ }
+ .logo-flixforum {
+    display: flex;
+    padding-left:22px;
+    font-family: "BebasNeue";
+    font-weight: 700;
+    font-size: 26px;
+    color: #D81F26;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+ }
+ .tvshowpicture{
+    display: flex;
+    flex-direction: row;
+    height: 200px;
+    width: 3000px;
+    background-color: #262D34;
+    position:relative;
+    padding-top:200px;
+    padding-left:700px;
+
+ }
+ .newpost {
+    float:right;
+ }
