--- a/src/Newpostmodal/Newpostmodal.css
+++ b/src/Newpostmodal/Newpostmodal.css
@@ -35,12 +35,22 @@
     padding:10px;
 }
 .buttonclose {
-  background-color: black; /* Green */
   border: none;
-  color: red;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  margin-top:-20px;
+  top:1px;
+  float:right;
   font-size: 16px;
 }
+
+.buttonsubmit {
+    background-color: black; /* Green */
+    border: none;
+    color: red;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom:1000px;
+    float:right;
+  }
