--- a/src/Newpostmodal/Newpostmodal.css
+++ b/src/Newpostmodal/Newpostmodal.css
@@ -13,7 +13,7 @@
 
 .modal-content {
     width:500px;
-    height:300px;
+    height:380px;
     background-color: #fff;
 }
 
@@ -34,6 +34,16 @@
 .modal-comments {
     padding:10px;
 }
+
+.comment-box{
+    border: 1px solid black;
+    width: 450px;
+    height: 150px;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 .buttonclose {
   border: none;
   margin-top:-20px;
@@ -46,11 +56,11 @@
     background-color: black; /* Green */
     border: none;
     color: red;
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin-bottom:1000px;
-    float:right;
+    float: right;
   }
