--- a/src/Newpostmodal/Newpostmodal.css
+++ b/src/Newpostmodal/Newpostmodal.css
@@ -13,7 +13,7 @@
 
 .modal-content {
     width:500px;
-    height:380px;
+    height:350px;
     background-color: #fff;
 }
 
@@ -29,6 +29,7 @@
     padding:10px;
     border-top:1px solid #eee;
     border-bottom:1px solid #eee;
+    font-weight: 500;
 }
 
 .modal-comments {
@@ -41,6 +42,7 @@
     height: 150px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 13px;
 }
 
 
@@ -54,13 +56,11 @@
 
 .buttonsubmit {
     background-color: black; /* Green */
-    border: none;
-    color: red;
-    /* padding: 10px 15px; */
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    color: #D81F26;
     font-size: 16px;
-    margin-bottom:1000px;
     float: right;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    font-weight: 600;
   }
