--- a/src/Newpostmodal/Newpostmodal.css
+++ b/src/Newpostmodal/Newpostmodal.css
@@ -25,24 +25,30 @@
     margin: 0;
 }
 
-.modal-body {
+.comment-title {
     padding:10px;
     border-top:1px solid #eee;
     border-bottom:1px solid #eee;
-    font-weight: 500;
 }
 
-.modal-comments {
+.comment-title-box {
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 450px;
+    height: 18px;
+    text-align: left;
+}
+
+.modal-post {
     padding:10px;
 }
 
-.comment-box{
-    border: 1px solid black;
+.post-box{
+    /* border: 1px solid black; */
     width: 450px;
     height: 150px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 13px;
 }
 
 
