--- a/public/shows.css
+++ b/public/shows.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 
 body {
-    /* background: #000; */
+    background: darkslategray;
 }
 
 .movies {
