--- a/src/ShowCard.css
+++ b/src/ShowCard.css
@@ -3,8 +3,18 @@
     margin-top: 10px;
 }
 
+.recommend {
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    margin-left: 20px;
+}
+
 .container {
     margin-left: 50px;
+    margin-top: 10px;
     display: flex;
     width: max-content;
+    transform: translateX(0px);
+    transition: all .5s ease;
 }
