--- a/src/Forum/Forumpage.css
+++ b/src/Forum/Forumpage.css
@@ -1,13 +1,15 @@
 .forumspage{
-  color: white;
-  flex-direction: column;
+  /* color: white;
+  flex-direction: column; */
   overflow: hidden;
 }
+
  .navigation-bar{
     background-color: black;
-    width:1460px;
+    /* width:1460px; */
     height:50px;
  }
+
  .logo-flixforum {
     display: flex;
     padding-left:22px;
@@ -16,13 +18,6 @@
     font-size: 26px;
     color: #D81F26;
     background-color: transparent;
-    background-repeat: no-repeat;
-    border: none;
-    cursor: pointer;
-    overflow: hidden;
-    outline: none;
-    justify-content: center;
-    align-items: center;
  }
  .show-title {
     display: flex;
@@ -32,38 +27,22 @@
     font-size: 20px;
     color: white;
  }
- .show-season {
-    display: flex;
-    padding-left:22px;
-    display: flex;
-    padding-left:22px;
-    font-family: "Arial";
-    font-weight: 500;
-    font-size: 20px;
-    color: white;
- }
- .show-episode {
-   display: flex;
-    padding-left:22px;
-    display: flex;
-    padding-left:22px;
-    font-family: "Arial";
-    font-weight: 500;
-    font-size: 20px;
-    color: white;
- }
+
  .tvshowpicture{
     display: flex;
-    flex-direction: row;
+    margin-left: auto;
+    /* justify-content: center; */
     height: 200px;
     width: 3000px;
+    /* flex-direction: row;
+    
     background-color: #262D34;
     position:relative;
     padding-top:200px;
-    padding-left:700px;
+    padding-left:700px; */
 
  }
- .newpost {
+ /* .newpost {
     float:right;
  }
 
@@ -76,4 +55,4 @@
       display: flex;
       align-items: center;
       font-weight: 600;
-    }
+    } */
