--- a/public/shows.css
+++ b/public/shows.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 
+
 body {
-    background: darkslategray;
+    /* background: darkslategray; */
+    background-color: black;
 }
+
 
 .movies {
     width: 100%;
