--- a/src/Searchbar/searchbar.css
+++ b/src/Searchbar/searchbar.css
@@ -1,28 +1,36 @@
-form .search-bar {
-  color: #555;
-  display: flex;
+.search-bar {
   border: 1px solid currentColor;
   border-radius: 10px;
-  border-color: white;
-  background-color: black;
+  background-color: transparent;
   border-width: 2px;
 }
 
-input .search-bar {
-  all :unset;
-  background-color: black;
-  /* background-image: url("./searchiconwhite.svg"); */
+.search-bar-icon {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
-.search-icon {
-  border-color:white;
-}
-
-::placeholder {
+input::placeholder {
     color: white;
     font-size: 15px;
     font-weight: bold;
 }
+
+input {
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.searchicon {
+  width:50px; 
+  height: 50px;
+  padding-top: 8px;
+  padding-right: 10px;
+  z-index: 8;
+}
+
+
 
 
 
