--- a/src/Searchbar/searchbar.css
+++ b/src/Searchbar/searchbar.css
@@ -1,13 +1,18 @@
 .search-bar {
-  border: 1px solid currentColor;
-  border-radius: 10px;
+  /* border: 1px solid currentColor;
+  border-radius: 10px; */
+  outline: none;
   background-color: transparent;
   border-width: 2px;
+  padding-top: 15px;
 }
 
 .search-bar-icon {
+  border: 2px solid white;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  border-radius: 10px;
+  height: 50px;
 }
 
 input::placeholder {
@@ -17,16 +22,17 @@ input::placeholder {
 }
 
 input {
-    color: white;
+    color: white; 
     font-size: 15px;
     font-weight: bold;
 }
 
 .searchicon {
-  width:50px; 
-  height: 50px;
-  padding-top: 8px;
+  width:40px; 
+  height: 40px;
+  padding-top: 5px;
   padding-right: 10px;
+  padding-left: 10px;
   z-index: 8;
 }
 
