--- a/src/Login/Loginpage.css
+++ b/src/Login/Loginpage.css
@@ -8,7 +8,7 @@
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    color:white;
+    /* color:white; */
     background-image: linear-gradient(70deg, #000000,  50%, #B82E1F);
   }
 
@@ -20,7 +20,7 @@
   @media screen and (min-width: 600px) {
     .auth-form-container {
       padding: 5rem;
-      border: 1px solid white;
+      /* border: 1px solid white; */
       border-radius: 10px;
       margin: 0.5rem;
     }
@@ -40,7 +40,7 @@
   
   button {
     border: none;
-    background-color: white;
+    /* background-color: white; */
     padding: 20px;
     border-radius: 10px;
     cursor: pointer;
@@ -49,7 +49,7 @@
   
   a:link, a:visited {
     background-color: transparent;
-    color: white;
+    /* color: white; */
     text-decoration: underline;
   }
   a:hover {
