--- a/src/ShowCard.css
+++ b/src/ShowCard.css
@@ -18,3 +18,21 @@
     transform: translateX(0px);
     transition: all .5s ease;
 }
+
+.leftarrow {
+    color:white;
+    position:absolute;
+    top:160px;
+    z-index:10;
+    cursor:pointer;
+    user-select:none;
+}
+.rightarrow {
+    color:white;
+    position:absolute;
+    left: 520px;
+    top:160px;
+    z-index:10;
+    cursor:pointer;
+    user-select:none;
+}
