--- a/src/Login/Loginpage.css
+++ b/src/Login/Loginpage.css
@@ -15,6 +15,7 @@
   .auth-form-container, .login-form, .register-form {
     display: flex;
     flex-direction: column;
+    color: white;
   }
   
   @media screen and (min-width: 600px) {
@@ -49,7 +50,7 @@
   
   a:link, a:visited {
     background-color: transparent;
-    /* color: white; */
+    color: white;
     text-decoration: underline;
   }
   a:hover {
