--- a/src/ShowCard.css
+++ b/src/ShowCard.css
@@ -22,7 +22,7 @@
 .leftarrow {
     color:white;
     position:absolute;
-    top:160px;
+    top: 220px;
     z-index:10;
     cursor:pointer;
     user-select:none;
@@ -30,9 +30,15 @@
 .rightarrow {
     color:white;
     position:absolute;
-    left: 520px;
-    top:160px;
+    left: 95%;
+    top: 220px;
     z-index:10;
     cursor:pointer;
     user-select:none;
 }
+
+.forum-posts {
+    margin-left: 335px;
+    margin-top: 30px;
+}
+
