Cleaned up code

--- a/src/Forum/Forumpage.css
+++ b/src/Forum/Forumpage.css
@@ -1,84 +1,54 @@
 .forumspage{
-  overflow: hidden;
+   overflow: hidden;
 }
 
-
-/*
- .navigation-bar{
-    background-color: black;
-    height:50px;
- }
-
- .logo-flixforum {
-    display: flex;
-    padding-left:22px;
-    font-family: "BebasNeue";
-    font-weight: 700;
-    font-size: 26px;
-    color: #D81F26;
-    background-color: transparent;
- }
-    background-repeat: no-repeat;
-    border: none;
-    cursor: pointer;
-    overflow: hidden;
-    outline: none;
-    justify-content: center;
-    align-items: center;
- }*/
- .show-title {
-    display: flex;
-    justify-content: center;
-    padding-top: 5px;
-    padding-right:630px;
-    font-family: "Arial";
-    font-weight: 500;
-    font-size: 30px;
-    color: white;
- }
-
-
- .goButton-episode-menu {
+.show-title {
    display: flex;
-   justify-content: center;
-   padding-right: 254px;
- }
+   margin-left: 350px;
+   padding-top: 5px;
+   font-family: "Arial";
+   font-weight: 800;
+   font-size: 30px;
+   color: white;
+}
 
- .dropdownSeason {
+.go-episode-menu-newpost {
+   display: inline-block;
+   margin-left: 356px;
+}
+
+.dropdownSeason {
    display: flex;
    justify-content: center;
    padding-right: 578px;
    padding-top: 5px;
- }
+}
 
- .dropdownEpisode {
+.dropdownEpisode {
    display: flex;
    justify-content: center;
-   padding-left:151px;
-   /* padding-right: 355px; */
    padding-top: 5px;
- }
+}
 
- .tvshowpicture{
+.tvshowpicture{
     display: flex;
     justify-content: center;
     position: relative;
     padding-top: 10px;
- }
+}
 
- .newpost-b {
+.newpost-logic {
    display:flex;
-   flex-direction: row;
+   /* flex-direction: row; */
    margin-left: 20px;
- }
- .newpost {
-  display:flex;
-  flex-direction: space-between;
- }
+}
 
- .newpost-button {
+.newpost {
+  display:flex;
+}
+
+.newpost-button {
       border: 2px solid black;
-      /* background-color: white; */
       color: black;
       padding: 14px 28px;
       font-size: 16px;
@@ -86,9 +56,9 @@
       border-color: #D81F26;
       color: #D81F26;
       background-color: transparent;
-   }
+}
 
-   .button-go {
+.button-go {
       background-color: #43465e;
       color: white;
       font-size: 16px;
@@ -102,36 +72,36 @@
       border-radius: 3px;
       border: 2px solid black;
       border-color:#dedede;
-   }
+}
 
-   .post-cards {
-      background-color: #43465e;
-      margin-bottom: 20px;
-   }
+.post-cards {
+   background-color: #43465e;
+   margin-bottom: 20px;
+}
 
-   .post-cards-content {
-      background-color: #43465e;
-   }
+.post-cards-content {
+   background-color: #43465e;
+}
 
-   .display-username {
-      font-size: 17px;
-      font-weight: 700;
-      color:white;
-   }
+.display-username {
+   font-size: 17px;
+   font-weight: 700;
+   color:white;
+}
 
-   .display-title {
-      font-size: 16px;
-      font-weight: 600;
-      margin-left:20px;
-      color:white;
-   }
+.display-title {
+   font-size: 16px;
+   font-weight: 600;
+   margin-left:20px;
+   color:white;
+}
 
-   .display-content {
-      font-size: 15px;
-      margin-left:20px;
-      color:white;
-   }
-   
-   .forum-posts {
-    padding-left: 15px;
-   }
+.display-content {
+   font-size: 15px;
+   margin-left:20px;
+   color:white;
+}
+
+.forum-posts {
+   padding-left: 15px;
+}
