--- a/src/Login/Loginpage.css
+++ b/src/Login/Loginpage.css
@@ -2,7 +2,7 @@
     background-image:linear-gradient(70deg, #000000,  30%, #B82E1F);
   }
   
-  .App2 {
+  .Register-Login {
     text-align: center;
     display: flex;
     min-height: 100vh;
