--- a/src/Forum/Forumpage.css
+++ b/src/Forum/Forumpage.css
@@ -3,7 +3,7 @@
 }
 
 .show-title {
-   display: flex;
+   display: inline-block;
    margin-left: 350px;
    padding-top: 5px;
    font-family: "Arial";
@@ -14,14 +14,14 @@
 
 .go-episode-menu-newpost {
    display: inline-block;
-   margin-left: 356px;
+   margin-left: 344px;
 }
 
 .dropdownSeason {
-   display: flex;
-   justify-content: center;
-   padding-right: 578px;
+   display: inline-block;
+   margin-left: 344px;
    padding-top: 5px;
+   padding-bottom: 8px;
 }
 
 .dropdownEpisode {
@@ -31,15 +31,14 @@
 }
 
 .tvshowpicture{
-    display: flex;
-    justify-content: center;
+    margin-left: 344px;
+    display: inline-block;
     position: relative;
     padding-top: 10px;
 }
 
 .newpost-logic {
    display:flex;
-   /* flex-direction: row; */
    margin-left: 20px;
 }
 
@@ -103,5 +102,6 @@
 }
 
 .forum-posts {
-   padding-left: 15px;
+   /* padding-left: 15px; */
+   justify-content: center;
 }
